# ManchesterRoboticsChallenges

./: .gitignore  README.md
minichallenge1_ws/src/minichallenge1/: package.xml  setup.py
minichallenge1_ws/src/minichallenge1/launch/: launch.py
minichallenge1_ws/src/minichallenge1/minichallenge1/: process.py  signal_generator.py
minichallenge2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
minichallenge2_ws/src/custom_interfaces/srv/: SetProcessBool.srv
minichallenge2_ws/src/motor_control/: package.xml  setup.py
minichallenge2_ws/src/motor_control/config/: params.yaml
minichallenge2_ws/src/motor_control/launch/: motor_launch.py
minichallenge2_ws/src/motor_control/motor_control/: controller.py  dc_motor.py  set_point.py
minichallenge3_ws/src/motor_control/: package.xml  setup.py
minichallenge3_ws/src/motor_control/motor_control/: motor_publisher.py
minichallenge3_ws/src/motor_control/motor_control/motor_suscriber/: motor_suscriber.ino
minichallenge4_ws/src/motor_control/: package.xml  setup.py
minichallenge4_ws/src/motor_control/launch/: motor_launch.py
minichallenge4_ws/src/motor_control/motor_control/: Input.py
minichallenge4_ws/src/motor_control/motor_control/Controller/: Controller.ino
