<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rickisierra03@gmail.com">ricardosierra</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias del paquete -->
  <depend>rclpy</depend>  <!-- Dependencia para trabajar con ROS 2 en Python -->
  <depend>std_msgs</depend>  <!-- Dependencia para mensajes estándar en ROS 2 -->
  <depend>numpy</depend>  <!-- Dependencia para operaciones numéricas -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
